--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,9 @@
     <string name="msg_telefono">Telefono (9999-9999)</string>
     <string name="msg_web">Sitio Web</string>
     <string name="bt_add_lugar">Agregar Lugar</string>
+    <string name="bt_update_lugar">Actualizar Lugar</string>
     <string name="msg_lugar_added">Lugar Agregado</string>
+    <string name="msg_lugar_updated">Lugar Actualizado</string>
     <string name="msg_data">Faltan Datos</string>
 
 
